Attempt to fix responsvieness on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,7 @@ html.dark a {
   background-color: #5f7ea9;
   color: #fff;
 }
+
+#navbar-default {
+  z-index: 9999;
+}
